# idmclib

idmclib/: .gitignore  AUTHORS  BUGS  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  Makefile.config  Makefile.inc  Makefile.inc.win  README  VERSION  configure.ac  idmclib.pc.cmake  idmclib.pc.in  reconf
idmclib/doc/: .gitignore  CAPI.texinfo  CMakeLists.txt  README  attractor.texinfo  clean.sh  gettingStarted.texinfo  intro.texinfo  manual.texinfo  module.mk  specifyingModels.texinfo  tutorial.texinfo  version.texinfo.cmake  version.texinfo.in
idmclib/doc/examples/: ex_error.c  example1.c  example2.c
idmclib/include/idmclib/: attractor.h  basin_common.h  basin_multi.h  basin_slow.h  cycles.h  defines.h  model.h  version.h.cmake  version.h.in
idmclib/java/: .gitignore  CMakeLists.txt  attractor.java  basin_multi.java  basin_test1.lua  basin_test2.lua  basin_test3.lua  idmc.i  idmc_attractor.i  idmc_basin.i  idmc_basin_multi.i  idmc_lexp.i  idmc_model.i  idmc_raster.i  idmc_version.i  invalid.lua  module.mk  runtimeError.lua
idmclib/jidmc/: CMakeLists.txt  Makefile  Makefile.am  idmc.i  idmc_basin.i  idmc_cycles.i  idmc_lexp.i  idmc_model.i  idmc_traj.i  main.java  syntaxError.lua
idmclib/pyidmc/: Makefile  idmc.i  idmc_basin.i  idmc_cycles.i  idmc_lexp.i  idmc_raster.i  idmc_traj.i  pydmc.c
idmclib/python/: CMakeLists.txt  idmc.i  idmc_model.i  inflation.lua  lexp.h  pydmcTest.py  test.lua
idmclib/ridmc/: CMakeLists.txt  Makefile  Makefile.am  OL3G.lua  basin.c  cycles.c  lexp.c  lorenz.lua  model.c  refreshPackage.sh  ridmc.R  ridmc.h  ridmcTest.R  test2.lua  testError2.lua  traj.c
idmclib/ridmc/RiDMC/: DESCRIPTION  configure.ac
idmclib/ridmc/RiDMC/R/: basin.R  bifurcation.R  cycles.R  lexp.R  model.R  tools.R  trajectory.R
idmclib/ridmc/RiDMC/inst/: ChangeLog
idmclib/ridmc/RiDMC/man/: Basin.Rd  Bifurcation.Rd  Model.Rd  RiDMC-package.Rd  Trajectory.Rd  cycles.Rd  internals.Rd  lexp.Rd
idmclib/ridmc/RiDMC/src/: Makevars  Makevars.in  Makevars.win  r_basin.c  r_cycles.c  r_lexp.c  r_model.c  r_traj.c  ridmc.c  traj.c
idmclib/src/: CMakeLists.txt  Makefile  Makefile.am  attractor.c  attractors_list.c  basin.c  basin.h  basin_multi.c  basin_slow.c  cycles.c  cycles.h  defines.h  gsl_rng_lualib.c  gsl_rng_lualib.h  lexp.c  lexp.h  lexp_aux.c  lexp_aux.h  matrices.c  matrices.h  model.c  model.h  module.mk  raster.c  raster.h  traj.c  traj.h
idmclib/src/blas/: Makefile  Makefile.am
idmclib/src/idmcblas/: CMakeLists.txt  Makefile.am
idmclib/src/idmclapack/: CMakeLists.txt  Makefile  Makefile.am  dgehrd.f  dhseqr.f  dlahqr.f  dlaln2.f  dlamch.f  dorgqr.f
idmclib/src/idmclib/: matrices.h
idmclib/src/lapack/: Makefile.am
idmclib/src/tests/: Makefile.am  test2.lua  test_basin.c  test_cycles.c  test_raster.c
idmclib/tcl/: .gitignore  BH-cobweb-async.lua  CMakeLists.txt  attractor_util.tcl  attractors.i  basin_multi.tcl  basin_test1.lua  basin_test2.lua  basin_test3.lua  compile.sh  find_attractors.tcl  idmc.i  idmc_attractor.i  idmc_basin.i  idmc_basin_multi.i  idmc_basin_slow.i  idmc_cycles.i  idmc_lexp.i  idmc_model.i  idmc_raster.i  idmc_traj.i  infjac.lua  init.tcl  misc_util.tcl  module.mk  olg4doublecorretto.lua  test.tcl  test_attractor.tcl  test_basin.tcl  test_infjac.sh  test_model.tcl  test_setSeed.tcl  test_util.tcl  trajectory.tcl
idmclib/tcl/gui/: attractor_util.tcl  basin.tcl  basin_comp.tcl  basin_multi.tcl  gui.tcl  init.tcl  test_infjac.sh
idmclib/tests/: .gitignore  CMakeLists.txt  Makefile  attractor_init.tcl  attractors_lists_init.tcl  init.tcl  module.mk  multacc.lua  test1.lua  testEmptyDesc.lua  test_NumJac.c  test_attractor.tcl  test_attractors_list.tcl  test_basin.c  test_basin_slow.c  test_common.c  test_common.h  test_cycles.c  test_error.lua  test_errors.c  test_lexp.c  test_model.c  test_raster.c  test_synt_error.lua  test_traj.c
