INCLUDE_DIRECTORIES(${JAVA_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${JAVA_INCLUDE_PATH2})
include_directories (${idmclib_SOURCE_DIR}/include)
link_directories (${idmclib_BINARY_DIR}/src)

FILE(MAKE_DIRECTORY ${idmclib_BINARY_DIR}/java/org/tsho/jidmclib)
SET(CMAKE_SWIG_OUTDIR org/tsho/jidmclib)
SET(CMAKE_SWIG_FLAGS -package org.tsho.jidmclib)

SWIG_ADD_MODULE(jidmclib java idmc.i)
SWIG_LINK_LIBRARIES(jidmclib
	idmclib
	${LUA_LIBRARY} ${LUALIB_LIBRARY} 
	${GSL_LIBRARY} ${GSLCBLAS_LIBRARY} ${M_LIBRARY})
IF(WIN32 AND NOT UNIX)
SET_TARGET_PROPERTIES(jidmclib PROPERTIES COMPILE_FLAGS -D_JNI_IMPLEMENTATION)
SET_TARGET_PROPERTIES(jidmclib PROPERTIES LINK_FLAGS -Wl,--kill-at)
ENDIF(WIN32 AND NOT UNIX)

INSTALL(TARGETS jidmclib DESTINATION lib/jidmclib)
INSTALL(DIRECTORY ${idmclib_BINARY_DIR}/java/org DESTINATION lib/jidmclib)
FILE(GLOB files "${CMAKE_CURRENT_BIN_DIR}/*.c")
INSTALL(FILES ${files} DESTINATION lib/jidmclib)
FILE(GLOB files "${CMAKE_CURRENT_SOURCE_DIR}/*.i")
INSTALL(FILES ${files} DESTINATION lib/jidmclib)
FILE(GLOB files "${CMAKE_CURRENT_SOURCE_DIR}/*.java")
INSTALL(FILES ${files} DESTINATION lib/jidmclib)
FILE(GLOB files "${CMAKE_CURRENT_SOURCE_DIR}/*.lua")
INSTALL(FILES ${files} DESTINATION lib/jidmclib)

IF(JAVA_COMPILE)
	add_custom_command(
		OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/attractor.class
		COMMAND ${JAVA_COMPILE}
			-classpath ${CMAKE_CURRENT_BINARY_DIR}
			${CMAKE_CURRENT_SOURCE_DIR}/attractor.java
			-d ${CMAKE_CURRENT_BINARY_DIR}
		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/attractor.java)
	add_custom_target(attractor ALL DEPENDS jidmclib ${CMAKE_CURRENT_BINARY_DIR}/attractor.class)
	ADD_TEST(java_attractor ${JAVA_RUNTIME} attractor)
ENDIF(JAVA_COMPILE)
