INCLUDE_DIRECTORIES(${TCL_INCLUDE_PATH})
include_directories (${idmclib_SOURCE_DIR}/include)
link_directories (${idmclib_BINARY_DIR}/src)


SWIG_ADD_MODULE(tclidmclib tcl idmc.i)
SET_TARGET_PROPERTIES(tclidmclib PROPERTIES COMPILE_FLAGS "-DUSE_TCL_STUBS -DUSE_TK_STUBS")
SWIG_LINK_LIBRARIES(tclidmclib
	idmclib ${TCL_STUB_LIBRARY}
	${LUA_LIBRARY} ${LUALIB_LIBRARY} 
	${GSL_LIBRARY} ${GSLCBLAS_LIBRARY} ${M_LIBRARY})

INSTALL(TARGETS tclidmclib DESTINATION lib/tclidmclib)
FILE(GLOB files "${CMAKE_CURRENT_BIN_DIR}/*.c")
INSTALL(FILES ${files} DESTINATION lib/tclidmclib)
FILE(GLOB files "${CMAKE_CURRENT_SOURCE_DIR}/*.i")
INSTALL(FILES ${files} DESTINATION lib/tclidmclib)
FILE(GLOB files "${CMAKE_CURRENT_SOURCE_DIR}/*.tcl")
INSTALL(FILES ${files} DESTINATION lib/tclidmclib
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE
	WORLD_READ WORLD_EXECUTE)
FILE(GLOB files "${CMAKE_CURRENT_SOURCE_DIR}/*.lua")
INSTALL(FILES ${files} DESTINATION lib/tclidmclib)

ADD_TEST(attractor ${idmclib_BINARY_DIR}/tcl/test_attractor.tcl)
ADD_TEST(basin_multi ${idmclib_BINARY_DIR}/tcl/test_basin.tcl)

